hphp/hack/test/typecheck/disallow_return_by_ref/function.php.exp
File "function.php", line 3, characters 11-14:
Returning by reference from a function is no longer supported in Hack. (NastCheck[3066])
