hphp/hack/test/typecheck/disallow_return_by_ref/function.php
<?hh // decl

function &test(): mixed {
  static $x;
  return $x;
}
